--- a/app/src/main/res/layout/fragment_mine2.xml
+++ b/app/src/main/res/layout/fragment_mine2.xml
@@ -118,7 +118,7 @@
                 </LinearLayout>
 
                 <View
-                    style="@style/horizontalblock"/>
+                    style="@style/horizontalblock" android:visibility="gone"/>
 
                 <LinearLayout
                     android:id="@+id/ll_robbing"
@@ -129,7 +129,8 @@
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:paddingLeft="16dp"
-                    android:paddingRight="16dp">
+                    android:paddingRight="16dp"
+                    android:visibility="gone">
 
                     <ImageView
                         android:layout_width="20dp"
