--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -11,29 +11,15 @@
             android:id="@+id/titleText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:text="TextView"
-            android:textAlignment="center"
-            android:textColor="#ff5000"
-            app:layout_constraintEnd_toStartOf="@+id/textView61"
-            app:layout_constraintStart_toEndOf="@+id/textView59" />
-
-        <TextView
-            android:id="@+id/textView59"
-            android:layout_width="4dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="#ff5000"/>
-
-        <TextView
-            android:id="@+id/textView61"
-            android:layout_width="1dp"
-            android:layout_height="0dp"
+            android:textColor="@color/colorContent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="#efefef"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 </layout>
