--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -111,13 +111,24 @@
                         />
 
                     <TextView
-
+                        android:id="@+id/tv_pay_remark"
                         android:layout_below="@+id/sp_coupon"
                         android:gravity="center_horizontal"
                         android:layout_marginTop="30dp"
                         android:textSize="14dp"
                         android:textColor="@color/colorRateRed"
                         android:text="请用平台支付，为您保证质量"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:id="@+id/tv_tel_remark"
+                        android:layout_below="@+id/tv_pay_remark"
+                        android:gravity="center_horizontal"
+                        android:layout_marginTop="10dp"
+                        android:textSize="14dp"
+                        android:textColor="@color/colorRateRed"
+                        android:text="投诉电话：18353454294"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
