--- a/app/src/main/res/layout/fragment_mine2.xml
+++ b/app/src/main/res/layout/fragment_mine2.xml
@@ -29,6 +29,28 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/ic_mine2" />
 
+                <TextView
+                    android:id="@+id/usernameText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:text="用户姓名"
+                    android:textColor="#ffffff"
+                    app:layout_constraintStart_toEndOf="@+id/imageView9"
+                    app:layout_constraintTop_toTopOf="@+id/imageView9" />
+
+                <TextView
+                    android:id="@+id/phoneText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginStart="8dp"
+                    android:text="联系电话"
+                    android:textColor="#ffffff"
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView9"
+                    app:layout_constraintStart_toEndOf="@+id/imageView9" />
+
             </android.support.constraint.ConstraintLayout>
 
             <LinearLayout
@@ -118,7 +140,7 @@
                 </LinearLayout>
 
                 <View
-                    style="@style/horizontalblock"/>
+                    style="@style/horizontalblock" android:visibility="gone"/>
 
                 <LinearLayout
                     android:id="@+id/ll_robbing"
@@ -129,7 +151,8 @@
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:paddingLeft="16dp"
-                    android:paddingRight="16dp">
+                    android:paddingRight="16dp"
+                    android:visibility="gone">
 
                     <ImageView
                         android:layout_width="20dp"
