--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,29 +43,15 @@
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:orientation="vertical">
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="0dp">
-
                     <EditText
                         android:id="@+id/et_username"
                         android:layout_width="match_parent"
                         android:layout_height="48dp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
-                        android:background="@drawable/text_view_border"
+                        android:background="@drawable/textview_border_radius"
                         android:gravity="center_vertical"
                         android:hint="请输入您的手机号" />
-                </android.support.design.widget.TextInputLayout>
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="20dp"
-                    android:focusableInTouchMode="false"
-                    app:passwordToggleEnabled="true">
 
                     <EditText
                         android:id="@+id/et_password"
@@ -73,12 +59,12 @@
                         android:layout_height="48dp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
-                        android:background="@drawable/text_view_border"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/textview_border_radius"
                         android:gravity="center_vertical"
                         android:hint="请输入您的密码"
                         android:inputType="textPassword" />
 
-                </android.support.design.widget.TextInputLayout>
                 <Button
                     android:id="@+id/btn_login"
                     android:layout_width="match_parent"
@@ -86,7 +72,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="50dp"
-                    android:background="@color/colorTheme"
+                    android:background="@drawable/button_border_radius"
                     android:text="登录"
                     android:textColor="@color/colorWhite" />
                 <Button
@@ -96,7 +82,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="10dp"
-                    android:background="@color/colorWhite"
+                    android:background="@null"
                     android:text="注册"
                     android:textColor="@color/colorTheme" />
 
