--- a/app/src/main/res/layout/activity_shop_validate.xml
+++ b/app/src/main/res/layout/activity_shop_validate.xml
@@ -36,9 +36,9 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/agreement"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                 app:srcCompat="@drawable/shop_create_step_1" />
 
             <TextView
@@ -117,18 +117,32 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
-            <TextView
-                android:id="@+id/agreement"
-                android:layout_width="wrap_content"
+
+            <LinearLayout
+                android:id="@+id/linearLayout"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:text="查看注册协议"
-                android:textColor="@color/c9"
+                android:layout_marginTop="8dp"
+                android:gravity="center"
+                android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                app:layout_constraintTop_toBottomOf="@+id/textView3"
+                android:padding="8dp">
+
+                <CheckBox
+                    android:id="@+id/agreeCheck"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/agreement"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="查看并同意注册协议"
+                    android:textColor="@color/c9"/>
+            </LinearLayout>
 
         </android.support.constraint.ConstraintLayout>
     </android.support.constraint.ConstraintLayout>
