--- a/app/src/main/res/layout/fragment_kind.xml
+++ b/app/src/main/res/layout/fragment_kind.xml
@@ -53,7 +53,7 @@
                 android:layout_marginTop="8dp"
                 android:background="@color/colorWhite"
                 android:padding="4dp"
-                android:text="已选定的维修项目"
+                android:text="你会维修的项目"
                 android:textColor="@color/colorContent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +75,7 @@
                 android:layout_marginTop="8dp"
                 android:background="@color/colorWhite"
                 android:padding="4dp"
-                android:text="已选择的安装项目"
+                android:text="你会安装的项目"
                 android:textColor="@color/colorContent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
