--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -33,34 +33,36 @@
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:textSize="14sp"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginRight="15dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="10dp"
                         android:maxLength="6"
                         android:hint="请填写姓名"
                         android:textColor="@color/colorTabTextNormal"
-                        android:background="@drawable/text_view_border_gray"
+                        android:background="@drawable/textview_border_radius"
                         />
                     <EditText
                         android:id="@+id/et_accept_mobile"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:textSize="14sp"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginRight="15dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="10dp"
                         android:hint="请填写手机号码"
                         android:maxLength="20"
                         android:inputType="phone"
                         android:textColor="@color/colorTabTextNormal"
-                        android:background="@drawable/text_view_border_gray"
+                        android:background="@drawable/textview_border_radius"
                         />
                     <LinearLayout
                         android:id="@+id/llLocation"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginRight="15dp"
-                        android:orientation="horizontal"
-                        android:background="@drawable/text_view_border_gray">
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal">
                         <TextView
                             android:id="@+id/tv_location"
                             android:layout_width="match_parent"
@@ -70,6 +72,7 @@
                             android:gravity="center_vertical"
                             android:hint="选择地址"
                             android:layout_weight="1"
+                            android:background="@drawable/textview_border_radius"
                             android:textColor="@color/colorTabTextNormal"
                             />
                         <TextView
@@ -77,6 +80,7 @@
                             android:layout_height="50dp"
                             android:layout_weight="3"
                             android:text="重新定位"
+                            android:background="@null"
                             android:gravity="right|center_vertical"
                             android:textColor="@color/colorRateRed"
                             />
@@ -87,12 +91,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:textSize="14sp"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginRight="15dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="10dp"
                         android:maxLength="30"
                         android:hint="您的详细地址"
                         android:textColor="@color/colorTabTextNormal"
-                        android:background="@drawable/text_view_border_gray"
+                        android:background="@drawable/textview_border_radius"
                         />
                     <EditText
                         android:id="@+id/et_remark"
@@ -100,15 +105,27 @@
                         android:layout_height="200dp"
                         android:textSize="14sp"
                         android:inputType="textMultiLine"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginRight="15dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
                         android:maxLength="30"
                         android:minLines="5"
                         android:gravity="left|top"
                         android:hint="现场情况简要描述"
                         android:textColor="@color/colorTabTextNormal"
-                        android:background="@drawable/text_view_border_gray"
+                        android:background="@drawable/textview_border_radius"
                         />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp">
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/recyclerView"
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/tv_pay_remark"
@@ -154,10 +171,10 @@
                 android:textColor="@color/colorTabTextNormal" />
             <TextView
                 android:id="@+id/btn_submit"
-                android:layout_width="150dp"
+                android:layout_width="180dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
-                android:background="@color/colorTheme"
+                android:background="@drawable/button_border_radius"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="提交订单"
                 android:textColor="@color/colorWhite" />
