--- a/app/src/main/res/layout/activity_edit_user_info.xml
+++ b/app/src/main/res/layout/activity_edit_user_info.xml
@@ -7,6 +7,18 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:gravity="center"
+            android:layout_marginTop="10dp">
+            <ImageButton
+                android:id="@+id/iv_user_face"
+                android:layout_width="70dp"
+                android:background="@mipmap/user_face"
+                android:layout_height="70dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginTop="10dp">
             <TextView
@@ -28,29 +40,29 @@
                 android:background="@drawable/textview_border_radius"
                 android:hint="请输入昵称" />
         </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="10dp">
-
-        <TextView
-            android:layout_width="50dp"
-            android:layout_height="48dp"
-            android:gravity="right|center_vertical"
-            android:textSize="14dp"
-            android:text="手机号"
-            />
-        <EditText
-            android:id="@+id/et_phone"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="11"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/textview_border_radius"
-            android:inputType="phone"
-            android:hint="请输入手机号" />
-    </LinearLayout>
+            android:layout_height="48dp"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="48dp"
+                android:gravity="right|center_vertical"
+                android:textSize="14dp"
+                android:text="手机号"
+                />
+            <EditText
+                android:id="@+id/et_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="11"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/textview_border_radius"
+                android:inputType="phone"
+                android:hint="请输入手机号" />
+        </LinearLayout>
 
 
 
