--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -26,7 +26,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="90dp"
                 android:background="@color/colorTheme">
                 <com.zxxapp.mall.maintenance.view.roundimage.CircleImageView
                     android:id="@+id/iv_mine_face"
@@ -342,7 +342,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="16dp"
-                        android:text="联系客服"
+                        android:text="联系客服和建议"
                         android:textColor="@color/colorContent"
                         android:textSize="15sp" />
                     <View
