--- a/app/src/main/res/layout/activity_shop_validate.xml
+++ b/app/src/main/res/layout/activity_shop_validate.xml
@@ -63,6 +63,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:text="完善店铺信息"
+                android:enabled="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView3" />
