--- a/app/src/main/res/layout/item_service_picture.xml
+++ b/app/src/main/res/layout/item_service_picture.xml
@@ -5,9 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp">
+        android:layout_margin="8dp"
+        android:background="@drawable/ic_service_bg">
 
         <ImageView
             android:id="@+id/iconImage"
