--- a/app/src/main/res/layout/activity_shop_create.xml
+++ b/app/src/main/res/layout/activity_shop_create.xml
@@ -152,7 +152,7 @@
             <ImageView
                 android:id="@+id/logoImage"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="200px"
                 android:scaleType="fitCenter"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
